# OmniaPi_HomeDomotic_Firmware

./: .gitignore  README.md  TODO.md
OmniaPi_HomeDomotic_Firmware/gateway/data/: index.html
OmniaPi_HomeDomotic_Firmware/gateway/src/: main.cpp
OmniaPi_HomeDomotic_Firmware/node/: CMakeLists.txt
OmniaPi_HomeDomotic_Firmware/node/main/: relay_control.c
OmniaPi_HomeDomotic_Firmware/shared/config/: hardware.h
OmniaPi_HomeDomotic_Firmware/shared/protocol/: messages.h
gateway/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
gateway/data/: index.html
gateway/main/: CMakeLists.txt  backend_client.c  backend_client.h  captive_portal.c  captive_portal.h  espnow_master.c  espnow_master.h  eth_manager.c  eth_manager.h  main.c  mqtt_handler.c  mqtt_handler.h  node_manager.c  node_manager.h  ota_handler.c  ota_handler.h  storage.c  storage.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
gateway/src/: main.cpp
gateway_arduino_test/: gateway_arduino_test.ino
gateway_mesh/: CMakeLists.txt  ota_upload.html  partitions.csv  sdkconfig.defaults
gateway_mesh/main/: CMakeLists.txt  Kconfig.projbuild  ble_prov.c  ble_prov.h  commissioning.c  commissioning.h  config_manager.c  config_manager.h  eth_manager.c  eth_manager.h  main.c  mesh_network.c  mesh_network.h  mqtt_handler.c  mqtt_handler.h  node_manager.c  node_manager.h  node_ota.c  node_ota.h  nvs_storage.c  nvs_storage.h  omniapi_protocol.h  ota_manager.c  ota_manager.h  status_led.c  status_led.h  web_api.c  web_api.h  web_ui.c  web_ui.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
led_strip/: CMakeLists.txt  sdkconfig.defaults
led_strip/main/: CMakeLists.txt  effects.c  effects.h  espnow_handler.c  espnow_handler.h  led_controller.c  led_controller.h  main.c
node/: partitions.csv  platformio.ini  sdkconfig.defaults
node/main/: CMakeLists.txt  button_handler.c  button_handler.h  espnow_handler.c  espnow_handler.h  led_status.c  led_status.h  main.c  relay_control.h
node/src/: main.cpp
node_arduino_test/: node_arduino_test.ino
node_mesh/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
node_mesh/main/: CMakeLists.txt  Kconfig.projbuild  button_handler.c  button_handler.h  commissioning.c  commissioning.h  device_led.c  device_led.h  device_relay.c  device_relay.h  main.c  mesh_node.c  mesh_node.h  nvs_storage.c  nvs_storage.h  omniapi_protocol.h  ota_receiver.c  ota_receiver.h  status_led.c  status_led.h
